# ParallelProject

./: CMakeLists.txt  DLX.cpp  DLX.h  DLXCuda.cu  DLXMpi.cpp  DLXOpenMp.cpp  MPI_DLX.cpp  ParallelProject.ipynb  ProjectOpenACC.cpp  Projectppt_template.pptx  README.md  Sequential.cpp  main.cpp  sudokuGen.cpp
bits/: stdc++.h
